--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box; 
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
    background-color: rgba(211, 211, 211, 0.219); 
